# image-inspector

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  nightly-scan.yml  release.yml
docs/: development.md  getting-started.md  releasing.md
src/image_inspector/: __init__.py  __main__.py  cli.py  dockerfile.py  inspection.py  models.py  registry.py  report.py  scanner.py  stats.py  ui.py  versions.py
src/image_inspector/data/: __init__.py  report.json
tests/: conftest.py  test_cli.py  test_details.py  test_dockerfile.py  test_inspection.py  test_registry.py  test_report.py  test_scanner.py  test_stats.py  test_ui.py  test_versions.py
tests/integration/: test_bundled_report.py
