[project]
name = "image-inspector"
version = "0.1.0"
description = "Interactive CLI to pick and digest-pin official container base images (Python, .NET, Java, Go, Node, Rust, C/C++, Ubuntu, Debian, Alpine)."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Andrew Malkov", email = "an.malkov@outlook.com" }
]
keywords = [
    "docker",
    "container",
    "dockerfile",
    "base-image",
    "cli",
    "digest",
    "devops",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
]
requires-python = ">=3.13"
dependencies = [
    "questionary>=2.0",
    "httpx>=0.27",
    "packaging>=24.0",
    "rich>=13.7",
    "pyfiglet>=1.0",
]

[project.urls]
Homepage = "https://github.com/anmalkov/image-inspector"
Repository = "https://github.com/anmalkov/image-inspector"
Issues = "https://github.com/anmalkov/image-inspector/issues"

[project.scripts]
image-inspector = "image_inspector.cli:main"
image-inspector-scan = "image_inspector.scanner:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
